--- a/imageeditlibrary/src/main/res/layout/activity_image_edit.xml
+++ b/imageeditlibrary/src/main/res/layout/activity_image_edit.xml
@@ -99,6 +99,12 @@
             android:layout_height="fill_parent"
             android:layout_gravity="center"
             android:visibility="gone" />
+        <com.xinlan.imageeditlibrary.editimage.view.LabelTextView
+            android:id="@+id/text_panel"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center"
+            android:visibility="gone" />
     </FrameLayout>
 
 </RelativeLayout>
